# DeskGhost

./: AGENTS.md  README.md  main.py  pyproject.toml
conf/: config.yaml
scripts/: setup.ps1  setup.sh
src/deskghost/: config.py  lock.py  logger.py  main.py  schedule.py
src/deskghost/macos/: watcher.py
src/deskghost/windows/: watcher.py
tests/: conftest.py  test_config.py  test_install.py  test_lock.py  test_logger.py  test_main.py  test_schedule.py
tests/macos/: test_watcher.py
tests/windows/: test_watcher.py
